Fix scrollbar showing when not needed on larger screens in OpponentPanel. Style waiting for chooser message.

--- a/next/src/styles/Game.module.css
+++ b/next/src/styles/Game.module.css
@@ -4,10 +4,7 @@
     justify-content: center;
     max-height: 100vh;
     flex-direction: column;
-}
-
-.main h1 {
-    text-align: center;
+    overflow: hidden;
 }
 
 .playingGroup {
@@ -16,6 +13,13 @@
     justify-content: center;
     flex-direction: column;
     width: 100%;
+}
+
+.waitingMessage {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
 }
 
 @media (min-width: 1200px) {
