--- a/next/src/styles/OpponentPanel.module.css
+++ b/next/src/styles/OpponentPanel.module.css
@@ -6,7 +6,7 @@
     top: 0;
     right: 0;
     overflow: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .hideOpponentPanelButton {
